Finishing touches on the sample list view.  Fixed an issue with the collapse feature and added the ability to handle pre-tag-like content.
Details:

- Added CSS class no-newlines
- Set the limit for delimited tracer column values to 10.
- Set custom templates for the animal__infusate column.
- Changed the existing table-cell CSS class to table-cell-nobr to differentiate the strategies.
- Added table-cell-newlines class to identify pre-tag-like content for collapse control.
- Updated the javascript to control the table-cell-newlines CSS classes.
- Removed the old sample list template.
- Fixed an issue with the initial collapsed state by adding the expected initial state to the template elements.

Files checked in: DataRepo/static/js/bst/list_view.js DataRepo/templates/models/bst/td.html DataRepo/templates/models/bst/value_list.html DataRepo/templates/models/sample/sample_list.html DataRepo/tests/static/js/bst/test_list_view.js DataRepo/tests/templates/models/bst/test_td.py DataRepo/views/models/sample.py static/css/extras.css DataRepo/templates/models/sample/infusate_td.html DataRepo/templates/models/sample/infusate_value.html

--- a/static/css/extras.css
+++ b/static/css/extras.css
@@ -11,6 +11,9 @@
 .newlines {
   white-space: pre;
 }
+.no-newlines {
+  white-space: nowrap;
+}
 
 .tiny {
   font-size: 0.6em;
